welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: '=' expected but ';' found.
while(fini==false){
^